<resources>
    <string name="app_name"></string>
    <string name="btn_login">INGRESAR</string>
    <string name="txt_drawer_title">TITULO</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_button_home">Home</string>
    <string name="menu_button_shop">Autos</string>
    <string name="menu_button_search">Buscar</string>
    <string name="menu_button_perfil">Perfil</string>

    <string name="menu_button_configuration">Configuracion</string>
    <string name="menu_button_favorites">Favoritos</string>
    <string name="general">Generales</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="username_default">Username</string>
    <string name="welcome">Hola</string>
    <string name="title_app_1">Premier</string>
    <string name="title_app_2">RentCar</string>
    <string name="username">Juan</string>
    <string name="password">Pass1234</string>
    <string name="forget_password">Olvidé la contraseña</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="autosDeportivos">Deportivos</string>
    <string name="autosSUV">SUV</string>
    <string name="autosElectricos">Eléctricos</string>
    <string name="filtro_auto">Filtro >|</string>
    <string name="txtViewMarca">Marcas</string>
    <string name="buscador">Buscador de vehículos</string>
    <string name="premier">Premier</string>
    <string name="rent_car">RentCar</string>


</resources>