<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_btn_bar"
        android:title="@string/menu_button_home"
        android:icon="@drawable/ic_home"
        app:exb_color="@color/colorSkyeBlue" />

    <item
        android:id="@+id/shop_btn_bar"
        android:title="@string/menu_button_shop"
        android:icon="@drawable/ic_shop"
        app:exb_color="@color/colorSkyeBlue" />

    <item
        android:id="@+id/search_btn_bar"
        android:title="@string/menu_button_search"
        android:icon="@drawable/ic_search"
        app:exb_color="@color/colorSkyeBlue" />

    <item
        android:id="@+id/perfil_btn_bar"
        android:title="@string/menu_button_perfil"
        android:icon="@drawable/ic_perfil"
        app:exb_color="@color/colorSkyeBlue" />
</menu>