<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sign_in"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title_app_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color5"
                android:text="@string/title_app_1"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.85" />
            <TextView
                android:id="@+id/title_app_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color2"
                android:text="@string/title_app_2"
                android:textColor="#001D42"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.85" />
        </LinearLayout>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/rounded_corner_edit_text"
            android:text="@string/username"
            android:textAlignment="center" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/rounded_corner_edit_text"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="206dp"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:textStyle="bold"
            android:background="@drawable/rounded_corner_btn_login"
            android:fontFamily="Poppins"
            android:text="@string/btn_login"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

