<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_perfil"
            android:title="@string/menu_button_perfil" />
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_button_configuration" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/abc_vector_test"
            android:title="@string/menu_button_favorites" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_search"
                android:title="@string/menu_button_perfil" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_button_perfil" />
        </menu>
    </item>
</menu>


<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
<!--    <group>-->
<!--        <item-->
<!--            android:id="@+id/nav_item_one"-->
<!--            android:icon="@drawable/ic_perfil"-->
<!--            android:title="Perfil"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/nav_item_two"-->
<!--            android:icon="@drawable/abc_vector_test"-->
<!--            android:title="Configuracion"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/nav_item_three"-->
<!--            android:icon="@drawable/abc_vector_test"-->
<!--            android:title="Favoritos"-->
<!--            />-->
<!--    </group>-->


<!--</menu>-->