<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.SettingsFragment"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:background="#EAEAF1">

        <TextView
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/general"
            android:textColor="@color/hiperVinculo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modo_oscuro"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/modo_oscuro"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/modo_oscuro"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/general" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/general_switch_modo_oscuro"
            style="@style/Widget.MaterialComponents.CompoundButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="@+id/modo_oscuro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/modo_oscuro" />

        <TextView
            android:id="@+id/notificaciones"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/notificaciones"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modo_oscuro" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/general_switch_notificaciones"
            style="@style/Widget.MaterialComponents.CompoundButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="@+id/notificaciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/notificaciones" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>